<resources>
  <string name="app_name">Communa</string>
  <string name="introduction">HELLO</string>
  <string name="introduction2">LET\'S GET ACQUAINTED</string>Let's get acquainted
  -----------------hints--------------------
  <string name="hint_name">What is your name?</string>
  <string name="hint_country">What is your country?</string>
  <string name="hint_action">What are you going to do?</string>
  <string name="hint_city">What is your city?</string>
  -----------------hints--------------------
  -----------------buttons--------------------
  <string name="first_activity_next">LET\'S GET STARTED!</string>
  <string name="second_activity_next">Next</string>
  -----------------buttons--------------------
  -----------------errors--------------------
  <string name="error_string">Field must not be empty</string>
  <string name="title_activity_settings">Settings</string>

</resources>
