<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".MainActivity">

  <include
    layout="@layout/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

  </include>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="16dp"
      android:clipToPadding="false"
      android:orientation="vertical"
      >

      <TextView
        android:id="@+id/introduction1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/introduction"
        android:textColor="@color/niceBlueColor"
        android:textSize="40dp"/>

      <TextView
        android:id="@+id/introduction2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/introduction2"
        android:textColor="@color/niceBlueColor"
        android:textSize="40dp"/>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:clipToPadding="false"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
          android:id="@+id/name_text_input"
          style="@style/niceTextEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:errorEnabled="true">

          <android.support.design.widget.TextInputEditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="textCapSentences"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
          android:id="@+id/country_text_input"
          style="@style/niceTextEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:errorEnabled="true">

          <android.support.design.widget.TextInputEditText
            android:id="@+id/country_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_country"
            android:inputType="textCapSentences"/>

        </android.support.design.widget.TextInputLayout>


      </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.button.MaterialButton
          android:id="@+id/next_button"
          style="@style/niceButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:text="@string/first_activity_next"/>

        <TextView
          android:id="@+id/already_have_account"
          android:textStyle="bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:layout_gravity="end"
          android:clickable="true"
          android:text="Already have an account?"
          android:textAlignment="center"
          android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
          android:textColor="@color/blue_grey_400"/>
      </LinearLayout>

    </LinearLayout>

  </ScrollView>

</LinearLayout>