<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".SecondActivity">

  <include
    layout="@layout/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
  </include>
  <android.support.v7.widget.CardView
    style="@style/MyCardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:layout_gravity="center"
    >

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:clipToPadding="false"
      android:orientation="vertical"
      >

      <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="First of all, let's get to know each other better "
        android:textColor="@color/niceBlueColor"
        android:textSize="30dp"/>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
          android:id="@+id/action_text_input"
          style="@style/niceTextEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <android.support.design.widget.TextInputEditText
            android:id="@+id/action_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_action"
            android:inputType="textCapSentences"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
          android:id="@+id/city_text_input"
          style="@style/niceTextEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <android.support.design.widget.TextInputEditText
            android:id="@+id/city_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_city"
            android:inputType="textCapSentences"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:gravity="end"
          android:orientation="horizontal">

          <android.support.design.button.MaterialButton
            android:id="@+id/next_button"
            style="@style/niceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/second_activity_next"/>


        </LinearLayout>


      </LinearLayout>
    </LinearLayout>


  </android.support.v7.widget.CardView>


</LinearLayout>